[package]
description = "SSE channels manager for Axum framework"
edition = "2021"
license = "MIT"
name = "axum-sse-manager"
repository = "https://github.com/imbolc/axum-sse-manager"
version = "0.1.0"

[dependencies]
async-stream = "0.3"
axum = "0.6"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }


[dev-dependencies]
rusty-hook = "0.11"
tokio-test = "0.4.2"
