[package]
description = "Tag channels and message using tags (WebSockets, SSE users management)"
edition = "2021"
license = "MIT"
name = "tagged-channels"
repository = "https://github.com/imbolc/tagged-channels"
version = "0.0.1"

[dependencies]
parking_lot = "0.12"
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
async-stream = "0.3"
axum = { version = "0.6", features = ["ws"] }
futures = "0.3"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4"
